fix: url parse illegal char in path (#1448)