@@ -26,6 +26,7 @@ import software.aws.solution.clickstream.common.model.*;
 import java.sql.*;
 import java.time.*;
 import java.util.*;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static software.aws.solution.clickstream.common.Util.*;
@@ -309,7 +310,7 @@ public final class ClickstreamEventParser extends BaseEventParser {
 
         List<String> platformOsList = Stream.of(
                 PLATFORM_ANDROID, PLATFORM_IOS, PLATFORM_WECHATMP
-        ).map(String::toLowerCase).toList();
+        ).map(String::toLowerCase).collect(Collectors.toList());
 
         if (ingestEvent.getPlatform() != null && platformOsList.contains(ingestEvent.getPlatform().toLowerCase())) {
             clickstreamEvent.setDeviceOperatingSystem(ingestEvent.getPlatform());
@@ -375,8 +376,8 @@ public final class ClickstreamEventParser extends BaseEventParser {
         if (ingestEvent.getAttributes() == null) {
             return;
         }
-        clickstreamEvent.setPageViewPageReferrer(ingestEvent.getAttributes().getPageReferrer());
-        clickstreamEvent.setPageViewPageReferrerTitle(ingestEvent.getAttributes().getPageReferrerTitle());
+        clickstreamEvent.setPageViewPageReferrer(deCodeUri(ingestEvent.getAttributes().getPageReferrer()));
+        clickstreamEvent.setPageViewPageReferrerTitle(deCodeUri(ingestEvent.getAttributes().getPageReferrerTitle()));
 
         if (EVENT_PAGE_VIEW.equals(ingestEvent.getEventName())) {
             clickstreamEvent.setPageViewEngagementTimeMsec(ingestEvent.getAttributes().getEngagementTimeMsec());
@@ -384,8 +385,8 @@ public final class ClickstreamEventParser extends BaseEventParser {
                 clickstreamEvent.setPageViewPreviousTimeMsec(ingestEvent.getAttributes().getPreviousTimestamp() + timeShiftInfo.getTimeDiff());
             }
         }
-        clickstreamEvent.setPageViewPageTitle(ingestEvent.getAttributes().getPageTitle());
-        clickstreamEvent.setPageViewPageUrl(ingestEvent.getAttributes().getPageUrl());
+        clickstreamEvent.setPageViewPageTitle(deCodeUri(ingestEvent.getAttributes().getPageTitle()));
+        clickstreamEvent.setPageViewPageUrl(deCodeUri(ingestEvent.getAttributes().getPageUrl()));
 
         setPageViewUrl(clickstreamEvent, ingestEvent.getAttributes().getPageUrl());
 
@@ -393,11 +394,11 @@ public final class ClickstreamEventParser extends BaseEventParser {
             clickstreamEvent.setPageViewHostname(ingestEvent.getHostName());
         }
 
-        clickstreamEvent.setPageViewLatestReferrer(ingestEvent.getAttributes().getLatestReferrer());
+        clickstreamEvent.setPageViewLatestReferrer(deCodeUri(ingestEvent.getAttributes().getLatestReferrer()));
         clickstreamEvent.setPageViewLatestReferrerHost(ingestEvent.getAttributes().getLatestReferrerHost());
-        if (clickstreamEvent.getPageViewLatestReferrer() != null
+        if (ingestEvent.getAttributes().getLatestReferrer() != null
                 && clickstreamEvent.getPageViewLatestReferrerHost() == null) {
-            UrlParseResult latestReferrerUrlParseResult = parseUrl(clickstreamEvent.getPageViewLatestReferrer());
+            UrlParseResult latestReferrerUrlParseResult = parseUrl(ingestEvent.getAttributes().getLatestReferrer());
             clickstreamEvent.setPageViewLatestReferrerHost(latestReferrerUrlParseResult.getHostName());
         }
         clickstreamEvent.setPageViewEntrances(ingestEvent.getAttributes().getEntrances());
@@ -492,8 +493,14 @@ public final class ClickstreamEventParser extends BaseEventParser {
         }
 
         // not set by client SDK
-        if (clientTsInfo.getSource() == null) {
-            setTrafficSourceBySourceParser(clickstreamEvent);
+        if (clientTsInfo.getSource() == null && ingestEvent.getAttributes() != null) {
+            setTrafficSourceBySourceParser(
+                    ingestEvent.getAttributes().getPageUrl(),
+                    ingestEvent.getAttributes().getPageReferrer(),
+                    ingestEvent.getAttributes().getLatestReferrer(),
+                    ingestEvent.getAttributes().getLatestReferrerHost(),
+                    clickstreamEvent
+            );
         }
     }
 
